--- a/src/UI/sd-ui/public/index.html
+++ b/src/UI/sd-ui/public/index.html
@@ -25,6 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>sportDeets</title>
+    
+    <!-- Umami Analytics -->
+    <script
+      defer
+      src="https://analytics.sportdeets.com/script.js"
+      data-website-id="ec2c6004-796d-421f-97f9-ea7e90437050"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
